2005-01-27  Alexander Gottwald  <ago at freedesktop dot org>

	* glwrap.c:
	Functions like glGenTextures and glBindTexture are in OpenGL 1.1
	and can be resolved at linktime.

2004-11-15  Alexander Gottwald  <ago at freedesktop dot org>

	* indirect.c:
	Bugzilla #1802, http://freedesktop.org/bugzilla/show_bug.cgi?id=1802
	Added mingw (Win32) port     

2004-08-13  Alexander Gottwald  <ago@freedesktop.org>

	* Imakefile: Added $(MESASRCDIR)/src/mesa/glapi to INCLUDES.
	Removed $(SERVERSRC)/mi from INCLUDES.
	Rearranged INCLUDES for better readability.
	* glwindows.h: Removed mipointrst.h and miscstruct.h from #include 
	since they are not used anymore.

2004-05-27  Alexander Gottwald  <ago@freedesktop.org>

	* glwindows.h: write current function and line in debug output
	* indirect.c: moved actual setup and creation of windows GL context to 
	glWinCreateContextReal. 
	* indirect.c (glWinCreateContext): Deferred context creation to attach.   
	* indirect.c (glWinMakeCurrent): Check if context is NULL. Fixes segfault.